Fix for feels like spacing and weather icon size.

--- a/web/styles/main.scss
+++ b/web/styles/main.scss
@@ -68,6 +68,12 @@ strong {
 	background: #fff;
 	padding: 17px;
 	margin-bottom: 30px;
+    .wi {
+        font-size: 0.8em;
+    }
+    small {
+        margin-top: 6px;
+    }
 
     .title {
 		margin-top: 0px;
